<resources>
    <string name="app_name">ASEAN Quiz</string>
    <string name="play">Play</string>
    <string name="addQuestion">Add Question</string>
    <string name="right_answer">Right answer:</string>
    <string name="question">Question:</string>
    <string name="answer_1">Answer 1:</string>
    <string name="answer_2">Answer 2:</string>
    <string name="answer_3">Answer 3:</string>
    <string name="answer_4">Answer 4:</string>
    <string name="add">Add</string>
</resources>
